--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "image-size": "^0.6.2",
     "jszip": "^3.1.5",
     "request": "^2.83.0",
+    "uuid": "^7.0.3",
     "xml-js": "^1.6.11",
     "xmlbuilder": "~09.0.1",
     "yarn": "^1.22.10"
